--- a/App/GOYO/Views/3_MyPageTab.storyboard
+++ b/App/GOYO/Views/3_MyPageTab.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +12,7 @@
         <!--My Page View Controller-->
         <scene sceneID="CiA-oa-Eag">
             <objects>
-                <viewController id="Gd1-je-Igt" customClass="MyPageViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Gd1-je-Igt" customClass="MyPageViewController" customModule="GOYO" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h6R-G4-qJD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,7 +41,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="ipj-2r-CHd">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ipj-2r-CHd" id="f3Z-XP-yRB">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -59,6 +60,68 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U9D-Me-ok1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2545" y="437"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="GTD-y6-EWq">
+            <objects>
+                <viewController restorationIdentifier="LoginViewController" storyboardIdentifier="LoginViewController" id="0kd-Kf-JoN" customClass="LoginViewController" customModule="GOYO" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y3U-ki-j5Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일을 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m8Q-7f-e29">
+                                <rect key="frame" x="57" y="308" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="lLC-E7-QGB"/>
+                                    <constraint firstAttribute="width" constant="300" id="zC5-5r-MY3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호를 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rRt-Nh-0Df">
+                                <rect key="frame" x="57" y="368" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="MML-Eg-5Zq"/>
+                                    <constraint firstAttribute="height" constant="40" id="gmC-gJ-jz8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElL-C7-wEf">
+                                <rect key="frame" x="176.5" y="452.5" width="61" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="로그인"/>
+                                <connections>
+                                    <action selector="loginButtonTapped:" destination="0kd-Kf-JoN" eventType="touchUpInside" id="jLb-JW-hjY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWA-g9-gwr">
+                                <rect key="frame" x="170.5" y="512.5" width="73" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="회원가입"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mWC-tt-p62"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rRt-Nh-0Df" firstAttribute="centerY" secondItem="Y3U-ki-j5Z" secondAttribute="centerY" constant="-60" id="Mwy-Ag-p8Y"/>
+                            <constraint firstItem="WWA-g9-gwr" firstAttribute="centerX" secondItem="Y3U-ki-j5Z" secondAttribute="centerX" id="RhQ-Ic-A5f"/>
+                            <constraint firstItem="ElL-C7-wEf" firstAttribute="centerY" secondItem="Y3U-ki-j5Z" secondAttribute="centerY" constant="20" id="SQJ-vg-tbV"/>
+                            <constraint firstItem="m8Q-7f-e29" firstAttribute="centerX" secondItem="Y3U-ki-j5Z" secondAttribute="centerX" id="YnI-kZ-1V0"/>
+                            <constraint firstItem="ElL-C7-wEf" firstAttribute="centerX" secondItem="Y3U-ki-j5Z" secondAttribute="centerX" id="ew2-iQ-3bS"/>
+                            <constraint firstItem="m8Q-7f-e29" firstAttribute="centerY" secondItem="Y3U-ki-j5Z" secondAttribute="centerY" constant="-120" id="lvL-Wt-2O1"/>
+                            <constraint firstItem="rRt-Nh-0Df" firstAttribute="centerX" secondItem="Y3U-ki-j5Z" secondAttribute="centerX" id="ogx-N4-JjC"/>
+                            <constraint firstItem="WWA-g9-gwr" firstAttribute="centerY" secondItem="Y3U-ki-j5Z" secondAttribute="centerY" constant="80" id="v2u-kc-9S5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="m8Q-7f-e29" id="GbE-9j-DdG"/>
+                        <outlet property="pwTextField" destination="rRt-Nh-0Df" id="gaH-3W-mNi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Ar-Rx-TMb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1761" y="-261"/>
         </scene>
         <!--마이 페이지-->
         <scene sceneID="jGC-GB-gOA">
